analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/danglingAnnotationOnMemberProperty.kt
annotation class Ann

class C {
    @Ann(value = {
        @Ann
        val <caret>localVal = 0
    }
}